--- a/web/components/header.html
+++ b/web/components/header.html
@@ -43,10 +43,11 @@
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse"> <i class="fa fa-bars"></i> </button>
           </div>
+
+<!-- Deberia generarse el contenido dinamicamente a partir de aqui -->
+        </div>
+      </nav>
+    </div>
+  </body>
           
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse navbar-main-collapse">
-            <ul class="nav navbar-nav">
-              <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-              <li class="hidden"> <a href="#page-top"></a> </li>
-              <li> <a class="page-scroll" href="#" onclick="showStuff('About')">About</a> </li>
+</html>
