--- a/web/components/header.html
+++ b/web/components/header.html
@@ -19,7 +19,7 @@
   <script type="text/javascript" src="./js/modernizr.custom.js"></script>
 
 
-  <title>G12 - Web of News</title>
+  <title>G12 - Web of Twitter Sentiment Analysis</title>
 </head>
 <body>
   <!-- Header -->
@@ -28,7 +28,7 @@
       <div class="container">
         <div class="row">
           <div class="intro-text">
-            <h1>Web of News</h1>
+            <h1>Web of Twitter Sentiment Analysis</h1>
             <hr>
             <p>G12 • AIW • Kevin - Víctor - Sergi</p>
             <a href="https://www.upf.edu/" class="btn btn-default btn-lg page-scroll">Learn More</a> </div>
@@ -49,4 +49,3 @@
             <ul class="nav navbar-nav">
               <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
               <li class="hidden"> <a href="#page-top"></a> </li>
-              <li> <a class="page-scroll" href="#" onclick="showStuff('About')">About</a> </li>
