clean code and working until quesitos

--- a/web/components/footer.html
+++ b/web/components/footer.html
@@ -27,7 +27,14 @@
           usersMentioned.hide();
           date.hide();
           heatMap.hide();
-          circleMap.hide();     
+          circleMap.hide();  
+        }else if(element === "UsersMentioned"){
+          hashTags.hide();
+          about.hide();
+          usersMentioned.show();
+          date.hide();
+          heatMap.hide();
+          circleMap.hide();    
         }else if(element === "Date"){
           hashTags.hide();
           about.hide();
