--- a/web/components/header.html
+++ b/web/components/header.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="./css/nivo-lightbox/nivo-lightbox.css">
   <link rel="stylesheet" type="text/css" href="./css/nivo-lightbox/default.css">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
-  <script type="text/javascript" src="./js/modernizr.custom.js"></script>
+  <!--<script type="text/javascript" src="./js/modernizr.custom.js"></script>-->
 
 
   <title>G12 - Web of Twitter Sentiment Analysis</title>
